<resources>
    <string name="app_name">GestiónTransporteCarga</string>
    <string name="correo">Correeo:</string>
    <string name="Password">Password:</string>
    <string name="login">Login</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="ingrese_correo">Ingrese su correo</string>
    <string name="ingrese_password">Ingrese su contraseña</string>
    <string name="Textonombre">Nombre</string>
    <string name="Textoapellido">Apellido</string>
    <string name="ingrese_nombre">Ingrese su nombre</string>
    <string name="ingrese_apellido">Ingrese su Apellido</string>
    <string name="TipoCliente">Cliente</string>
    <string name="TipoConductor">Conductor</string>
    <string name="TipoPropietario">Propietario</string>
    <string name="TipoUsuario">Tipos de usuario </string>
    <string name="salir">Salir</string>
    <string name="solicitud_de_viajes">Solicitud de viajes</string>
    <string name="solicitud_de_trasporte">Solicitud de trasporte</string>
    <string name="direccion_recogida">Direccion Recogida:</string>
    <string name="direccion_de_destino">Direccion de destino:</string>
    <string name="dimensiones_del_paquete">Dimensiones del paquete:</string>
    <string name="digite_su_direccion">Digite su direccion:</string>
    <string name="digite_la_direccion">Digite la direccion:</string>
    <string name="marca">Marca</string>
    <string name="name">Name</string>
    <string name="agregar">AGREGAR</string>
    <string name="placa">Placa</string>
    <string name="digite_su_marca">Digite su marca</string>
    <string name="digite_su_placa">Digite su placa</string>


</resources>