<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SolicituTransporteCliente">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="607dp">

                <TextView
                    android:id="@+id/textDireccionOrigen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/direccion_recogida"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/informacionDireccionOrigen"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/informacionDireccionOrigen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginBottom="22dp"
                    android:ems="10"
                    android:hint="@string/digite_su_direccion"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/textDimensiones"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textDireccionOrigen" />

                <TextView
                    android:id="@+id/textDimensiones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/dimensiones_del_paquete"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/textAltura"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/informacionDireccionOrigen" />

                <TextView
                    android:id="@+id/textAltura"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="80dp"
                    android:text="Altura"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextNumberAlto"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textDimensiones" />

                <EditText
                    android:id="@+id/editTextNumberAncho"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="200dp"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/TextDireccionDestino"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textAncho" />

                <EditText
                    android:id="@+id/editTextNumberAlto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="200dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/textAncho"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textAltura" />

                <TextView
                    android:id="@+id/textAncho"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginBottom="5dp"
                    android:text="Ancho"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextNumberAncho"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNumberAlto" />

                <EditText
                    android:id="@+id/informacionDireccionDestino"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginBottom="27dp"
                    android:ems="10"
                    android:hint="@string/digite_la_direccion"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/TextDireccionDestino" />

                <TextView
                    android:id="@+id/TextDireccionDestino"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/direccion_de_destino"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/informacionDireccionDestino"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNumberAncho"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="150dp"
                    android:layout_marginBottom="44dp"
                    android:text="Button"
                    android:onClick="CrearSolicitud"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/informacionDireccionDestino" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>